--- a/dccwebproject/loginapp/templates/loginapp/engglist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist1.html
@@ -308,6 +308,11 @@
             <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
           </li>
           <li>
+          <a href="{% url 'loginapp:productsave' %}">
+            <i class="fa fa-files-o"></i> <span>Add Products</span>
+          </a>
+        </li>
+          <li>
           <a href="{% url 'loginapp:regcoadmin' %}">
             <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
           </a>
@@ -437,6 +442,7 @@
                                <th>Status</th>
                                <th>Address</th>
                                 <th>Edit</th>
+                                <th>Track</th>
                              </tr>
                               {% for list in enggobjs %}
                              <tr>
@@ -445,6 +451,7 @@
                                <td>{{list.engg_contact_number}}</td>
                                 <td>{{list.engg_city}}</td>
                                   <td>{{list.engg_branch_code}}</td>
+
                                <td><span class="label label-success">{{list.engg_status}}</span></td>
                                <td>{{list.engg_address}}</td>
                                <td><a href="{% url 'loginapp:enggupdates' list.id %}">update</a></td>
