--- a/dccwebproject/loginapp/templates/loginapp/stocklist.html
+++ b/dccwebproject/loginapp/templates/loginapp/stocklist.html
@@ -308,6 +308,11 @@
             <li><a href="{% url 'loginapp:dash1' %}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
           </li>
           <li>
+          <a href="{% url 'loginapp:productsave' %}">
+            <i class="fa fa-files-o"></i> <span>Add Products</span>
+          </a>
+        </li>
+          <li>
           <a href="{% url 'loginapp:regcoadmin' %}">
             <i class="fa fa-files-o"></i> <span>Add co-Admin</span>
           </a>
