--- a/dccwebproject/loginapp/templates/loginapp/calendar1.html
+++ b/dccwebproject/loginapp/templates/loginapp/calendar1.html
@@ -365,25 +365,10 @@
 
 
           <li class="active">
-            <a href="calendar.html">
+            <a href="{% url 'loginapp:calendars' %}">
             <i class="fa fa-calendar"></i> <span>Calendar</span>
-            <span class="pull-right-container">
-              <small class="label pull-right bg-red">3</small>
-              <small class="label pull-right bg-blue">17</small>
-            </span>
           </a>
           </li>
-          <li>
-            <a href="mailbox/mailbox.html">
-            <i class="fa fa-envelope"></i> <span>Mailbox</span>
-            <span class="pull-right-container">
-              <small class="label pull-right bg-yellow">12</small>
-              <small class="label pull-right bg-green">16</small>
-              <small class="label pull-right bg-red">5</small>
-            </span>
-          </a>
-          </li>
-
       </section>
       <!-- /.sidebar -->
     </aside>
@@ -691,7 +676,7 @@
         dragRevertDuration: 0,
         startEditable: true,
         eventLimit: true,
-        allDayDefault: true,
+        allDayDefault: false,
         selectable: true,
         selectHelper: true,
         header: {
@@ -702,7 +687,7 @@
 
         eventSources: [
     {
-      url  : "/eventcall",
+      url  : "/eventcall1",
       color: 'gray',
       textColor: 'white',
     }
