--- a/dccwebproject/loginapp/templates/loginapp/callallocate_form1.html
+++ b/dccwebproject/loginapp/templates/loginapp/callallocate_form1.html
@@ -12,6 +12,12 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
+  <script type="text/javascript" src="/my_admin/jsi18n/"></script>
+<script type="text/javascript" src="/media/admin/js/core.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/admin/css/forms.css"/>
+<link rel="stylesheet" type="text/css" href="/media/admin/css/base.css"/>
+<link rel="stylesheet" type="text/css" href="/media/admin/css/global.css"/>
+<link rel="stylesheet" type="text/css" href="/media/admin/css/widgets.css"/>
   <link rel="stylesheet" href="{% static 'loginapp/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{% static 'loginapp/bower_components/font-awesome/css/font-awesome.min.css' %}">
@@ -376,22 +382,9 @@
           <li>
             <a href="{% url 'loginapp:calendars' %}">
               <i class="fa fa-calendar"></i> <span>Calendar</span>
-              <span class="pull-right-container">
-                <small class="label pull-right bg-red">3</small>
-                <small class="label pull-right bg-blue">17</small>
-              </span>
             </a>
           </li>
-          <li>
-            <a href="pages/mailbox/mailbox.html">
-              <i class="fa fa-envelope"></i> <span>Mailbox</span>
-              <span class="pull-right-container">
-                <small class="label pull-right bg-yellow">12</small>
-                <small class="label pull-right bg-green">16</small>
-                <small class="label pull-right bg-red">5</small>
-              </span>
-            </a>
-          </li>
+        
 
       </section>
       <!-- /.sidebar -->
@@ -428,7 +421,7 @@
 
                       <div class="form-group has-feedback table-responsive">
                       <table class="table">
-                        {{ callallocateform|bootstrap }}
+                        {{ callallocateform|bootstrap}}
                       </table>
                       <!-- <div class="form-row">
          {{ callallocateform.instance.field3.errors }}
