--- a/dccwebproject/loginapp/templates/loginapp/index.html
+++ b/dccwebproject/loginapp/templates/loginapp/index.html
@@ -1,4 +1,6 @@
+
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -167,6 +169,7 @@
 
             </ul>
           </li>
+
           <!-- Tasks: style can be found in dropdown.less -->
 
           <!-- User Account: style can be found in dropdown.less -->
@@ -376,74 +379,24 @@
           <div class="nav-tabs-custom">
             <!-- Tabs within a box -->
             <canvas id="myChart" width="400" height="400"></canvas>
-<script>
-var ctx = document.getElementById("myChart").getContext('2d');
-var myChart = new Chart(ctx,{
-    type: 'bar',
-    data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [{
-            label: '# of Votes',
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255,99,132,1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
-                }
-            }]
-        }
-    }
-});
-</script>
+
           </div>
           <!-- /.nav-tabs-custom -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-          <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-          <script src="//cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
-          <script src="{% static 'loginapp/js/main.js' %}"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          <!--<script src="//cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>-->
+        
           <!-- Chat box -->
 
           <div class="box box-success">
             <div class="box-header">
-              <div class="col s3">
-       <div class="card">
-           <div class="collection">
-               {% for user in users %}
-               <a href="{% url 'chat' request.user.id user.id %}" id="user{{ user.id }}" class="collection-item row">
+              <div class="col-sm-3">
 
-                   <div class="col s8">
-                   <span class="title" style="font-weight: bolder">{{ user.username }}</span>
-                   </div>
-               </a>
-               {% endfor %}
-           </div>
        </div>
-       </div>
+
               <i class="fa fa-comments-o"></i>
 
               <h3 class="box-title">Chat</h3>
-
-
               <div class="box-tools pull-right" data-toggle="tooltip" title="Status">
                 <div class="btn-group" data-toggle="btn-toggle">
                   <button type="button" class="btn btn-default btn-sm active"><i class="fa fa-square text-green"></i>
@@ -452,27 +405,53 @@ var myChart = new Chart(ctx,{
                 </div>
               </div>
             </div>
-            <div class="box-body chat" id="chat-box">
-              <!-- chat item -->
-              <div class="item">
+            <div class="section" style="height: 80vh">
+      <div class="row">
+          <div class="col-sm-12">
+            <div id="chat-body" class="panel panel-default">
+
+                   <div id="msg-list-div" class="panel-body">
+                       <ul id="msg-list" class="list-group">
+
+                           {% for obj in chat %}
+
+                                   {%if obj.user == request.user%}
+                                   <li class="text-right list-group-item">{{ obj.message }}</li>
+                                       {%else%}
+                                   <li class="text-left list-group-item">{{ obj.message }}</li>
+                                   {%endif%}
+                                   {% empty %}
+                                   <li class="text-right list-group-item">No messages yet!</li>
+                           {% endfor %}
+                           <script>
+                               var chatlist = document.getElementById('msg-list-div');
+                               chatlist.scrollTop = chatlist.scrollHeight;
+                           </script>
+                       </ul>
 
 
-              <div class="item">
+                   </div>
+               </div>
 
-              </div>
-              <!-- /.item -->
-            </div>
-            <!-- /.chat -->
-            <div class="box-footer">
-              <div class="input-group">
-                <input class="form-control" placeholder="Type message...">
+               <form id="chat-form" method="post" action="{% url 'loginapp:post' %}">
+                 {%csrf_token%}
+                   <div id="chat-bottom" class="input-group">
+                       <input type="text" id="chat-msg" name="chat-msg" class="form-control"/>
+                       <span class="input-group-btn">
+                       <div>
+                           <input class="btn btn-primary" id="send" type="submit" value="Send"/>
+                       </div>
 
-                <div class="input-group-btn">
-                  <button type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </div>
+                       </span>
+                   </div>
+               </form>
+           <script src="{% static 'loginapp/chat.js' %}"></script>
           </div>
+        </div>
+      </div>
+    </div>
+
+
           <!-- /.box (chat box) -->
 
 
