--- a/dccwebproject/loginapp/templates/loginapp/index2.html
+++ b/dccwebproject/loginapp/templates/loginapp/index2.html
@@ -341,20 +341,6 @@
         <li>
           <a href="{% url 'loginapp:calendar' %}">
             <i class="fa fa-calendar"></i> <span>Calendar</span>
-            <span class="pull-right-container">
-              <small class="label pull-right bg-red">3</small>
-              <small class="label pull-right bg-blue">17</small>
-            </span>
-          </a>
-        </li>
-        <li>
-          <a href="pages/mailbox/mailbox.html">
-            <i class="fa fa-envelope"></i> <span>Mailbox</span>
-            <span class="pull-right-container">
-              <small class="label pull-right bg-yellow">12</small>
-              <small class="label pull-right bg-green">16</small>
-              <small class="label pull-right bg-red">5</small>
-            </span>
           </a>
         </li>
 
@@ -465,73 +451,46 @@
             </div>
             <div class="box-body chat" id="chat-box">
               <!-- chat item -->
-              <div class="item">
-                <img src="{% static 'loginapp/dist/img/user4-128x128.jpg' %}" alt="user image" class="online">
+              <div class="col-sm-12">
+                <div id="chat-body" class="panel panel-default">
 
-                <p class="message">
-                  <a href="#" class="name">
-                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 2:15</small>
-                    Mike Doe
-                  </a>
-                  I would like to meet you to discuss the latest news about
-                  the arrival of the new theme. They say it is going to be one the
-                  best themes on the market
-                </p>
-                <div class="attachment">
-                  <h4>Attachments:</h4>
+                       <div id="msg-list-div" class="panel-body">
+                           <ul id="msg-list" class="list-group">
 
-                  <p class="filename">
-                    Theme-thumbnail-image.jpg
-                  </p>
+                               {% for obj in chat %}
 
-                  <div class="pull-right">
-                    <button type="button" class="btn btn-primary btn-sm btn-flat">Open</button>
-                  </div>
-                </div>
-                <!-- /.attachment -->
+
+                                       <li class="text-left list-group-item">{{ obj.message }}</li>
+
+                                       {% empty %}
+                                       <li class="text-right list-group-item">No messages yet!</li>
+                               {% endfor %}
+                               <script>
+                                   var chatlist = document.getElementById('msg-list-div');
+                                   chatlist.scrollTop = chatlist.scrollHeight;
+                               </script>
+                           </ul>
+
+
+                       </div>
+                   </div>
+
+                   <form id="chat-form" method="post" action="/post/">
+                     {%csrf_token%}
+                       <div id="chat-bottom" class="input-group">
+                           <input type="text" id="chat-msg" name="chat-msg" class="form-control"/>
+                           <span class="input-group-btn">
+                           <div>
+                               <input class="btn btn-primary" id="send" type="submit" value="Send"/>
+                           </div>
+
+                           </span>
+                       </div>
+                   </form>
+               <script src="{% static 'loginapp/chat.js' %}"></script>
+
               </div>
-              <!-- /.item -->
-              <!-- chat item -->
-              <div class="item">
-                <img src="{% static 'loginapp/dist/img/user3-128x128.jpg' %}" alt="user image" class="offline">
 
-                <p class="message">
-                  <a href="#" class="name">
-                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
-                    Admin
-                  </a>
-                  I would like to meet you to discuss the latest news about
-                  the arrival of the new theme. They say it is going to be one the
-                  best themes on the market
-                </p>
-              </div>
-              <!-- /.item -->
-              <!-- chat item -->
-              <div class="item">
-                <img src="{% static 'loginapp/dist/img/user2-160x160.jpg' %}" alt="user image" class="offline">
-
-                <p class="message">
-                  <a href="#" class="name">
-                    <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:30</small>
-                    Susan Doe
-                  </a>
-                  I would like to meet you to discuss the latest news about
-                  the arrival of the new theme. They say it is going to be one the
-                  best themes on the market
-                </p>
-              </div>
-              <!-- /.item -->
-            </div>
-            <!-- /.chat -->
-            <div class="box-footer">
-              <div class="input-group">
-                <input class="form-control" placeholder="Type message...">
-
-                <div class="input-group-btn">
-                  <button type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
-                </div>
-              </div>
-            </div>
           </div>
           <!-- /.box (chat box) -->
 
