--- a/dccwebproject/loginapp/templates/loginapp/enggdetail.html
+++ b/dccwebproject/loginapp/templates/loginapp/enggdetail.html
@@ -397,12 +397,13 @@
                                <th>Address</th>
                              </tr>
                              <tr>
-                               <td>{{engg.id}}</td>
+                               <td>{{engg.engg_id}}</td>
                                <td><img src="{% url 'db_file_storage.get_file' %}?name={{ engg.engg_pic }}"  height="10%"></td>
                                <td>{{engg.engg_name}}</td>
                                <td>{{engg.engg_contact_number}}</td>
                                 <td>{{engg.engg_city}}</td>
                                <td>{{engg.engg_address}}</td>
+
                              </tr>
 
                            </table>
