--- a/dccwebproject/loginapp/templates/loginapp/engglist1.html
+++ b/dccwebproject/loginapp/templates/loginapp/engglist1.html
@@ -333,6 +333,16 @@
             <i class="fa fa-files-o"></i> <span>Track Engineers</span>
           </a>
         </li>
+        <li>
+        <a href="{% url 'loginapp:stockentry' %}">
+          <i class="fa fa-files-o"></i> <span>Stock Entry</span>
+        </a>
+        </li>
+        <li>
+        <a href="{% url 'loginapp:stocklist' %}">
+          <i class="fa fa-files-o"></i> <span>Stock List</span>
+        </a>
+        </li>
           <li>
           <a href="{% url 'loginapp:getcoadmin' %}">
             <i class="fa fa-files-o"></i> <span>Coadmin List</span>
@@ -368,12 +378,7 @@
 
             </a>
           </li>
-          <li>
-            <a href="pages/mailbox/mailbox.html">
-              <i class="fa fa-envelope"></i> <span>Mailbox</span>
 
-            </a>
-          </li>
 
       </section>
       <!-- /.sidebar -->
