--- a/dccwebproject/loginapp/templates/loginapp/enggdetail1.html
+++ b/dccwebproject/loginapp/templates/loginapp/enggdetail1.html
@@ -426,12 +426,13 @@
                                <th>Address</th>
                              </tr>
                              <tr>
-                               <td>{{engg.id}}</td>
+                               <td>{{engg.engg_id}}</td>
                                <td><img src="{{engg.engg_pic.url}}"  height="10%"></td>
                                <td>{{engg.engg_name}}</td>
                                <td>{{engg.engg_contact_number}}</td>
                                 <td>{{engg.engg_city}}</td>
                                <td>{{engg.engg_address}}</td>
+                              
                              </tr>
 
                            </table>
